# common_tools_lib

./: .gitignore  CMakeLists.txt  Doxyfile.in  LICENSE  README.md  build_amd64.sh  build_armhf.sh  build_default.sh  build_gtest.bat  clean.sh
.github/workflows/: cmake.yml  mac_os_latest.yml  ubuntu_latest.yml  windows_latest.yml  windows_msvc.yml
Additional/: DataTypeDefines.h  ErrorHandler.hpp  FileHandlingDefines.h  SocketDefines.h  ThreadingDefines.h  UARTDefines.h
Additional/ctlib/: DataTypeDefines.h  ErrorHandler.hpp  FileHandlingDefines.h  SocketDefines.h  ThreadingDefines.h  UARTDefines.h
Communication/: Socket.c  Socket.h  SourceFiles.cmake  UARTInterface.cpp  UARTInterface.h
Communication/include/: Socket.h  Socket.hpp  UARTInterface.h
Communication/include/ctlib/: Socket.h  Socket.hpp  UARTInterface.h
Communication/src/: Socket.c  Socket.cpp  UARTInterface.c
ErrorHandling/: SourceFiles.cmake
ErrorHandling/include/: ErrorCodeDefines.h  ErrorHandler.h
ErrorHandling/include/ctlib/: ErrorCodeDefines.h  ErrorHandler.h  Exception.h  ExceptionHandler.h
ErrorHandling/src/: ErrorHandler.c  Exception.cpp  ExceptionHandler.cpp
FileHandling/: SourceFiles.cmake
FileHandling/include/: FileHandler.h
FileHandling/include/ctlib/: FileHandler.h  FileHandler.hpp
FileHandling/src/: FileHandler.c  FileHandler.cpp
Logging/: Logging.h  SourceFiles.cmake
Logging/include/: Logging.h
Logging/include/ctlib/: Logging.h  Logging.hpp
Logging/src/: Logging.c  Logging.cpp
Protocols/include/ctlib/: CSVHandler.h
Protocols/src/: CSVHandler.c
Threading/: SourceFiles.cmake
Threading/include/: Threading.h  Threading.hpp
Threading/include/ctlib/: ThreadArg.hpp  Threading.h  Threading.hpp
Threading/src/: Threading.c  Threading.cpp
Timing/: SourceFiles.cmake
Timing/include/ctlib/: Timing.hpp
Timing/src/: Timing.cpp
UnitTesting/: CMakeLists.txt  ExceptionUnitTest.cpp  FileHandlingUnitTest.cpp  SocketUnitTest.cpp  ThreadingUnitTest.cpp
cmake/: build_documentation.cmake
cmake/installers/: deb_installer.cmake  mac_bundle_installer.cmake  windows_nsis_installer.cmake
cmake/installers/mac_bundle/: Info.plist  logo.icns
